crates/assembly/src/tests/snapshots/miden_assembly__tests__dynamic_code_blocks__program_with_dynamic_code_execution.snap
---
source: crates/assembly/src/tests/dynamic_code_blocks.rs
expression: program
---
begin
    join
        basic_block push(2147483648) push(4294967294) mstore drop noop end
        dyn
    end
end
